Resolves tdf#135790 - Support for multiple %MOD1/2 entries

While loop added

Change-Id: I81386bb23381e5248f3c045ad2b998a92346ec34
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101700
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit db5f204b1d3d96975d902b587d6d18bc06610eea)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101860